KMeans consulting project

--- a/06_sparkKMeans.ipynb
+++ b/06_sparkKMeans.ipynb
@@ -233,7 +233,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         },
         "outputId": "8682876a-a139-4cc9-ae96-a88096fc1969"
       },
@@ -370,7 +370,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         },
         "outputId": "5d8b0683-86f6-42b0-beb5-79b7b789f200"
       },
@@ -669,7 +669,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 91
+          "height": 111
         },
         "outputId": "0ed73b20-a829-49bd-8905-59b76118f344"
       },
@@ -742,6 +742,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r9jU8hif74hs",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Consulting project"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "smzWfafE3_tf",
@@ -749,7 +759,385 @@
         "colab": {}
       },
       "source": [
-        ""
+        "spark = SparkSession.builder.appName('cluster').getOrCreate()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kjypyu7080WQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset = spark.read.csv('hack_data.csv',header=True,inferSchema=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7WLramSH9LJ0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "647131d6-2494-4f7c-b6d6-f5c8b513cab0"
+      },
+      "source": [
+        "dataset.head(1)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(Session_Connection_Time=8.0, Bytes Transferred=391.09, Kali_Trace_Used=1, Servers_Corrupted=2.96, Pages_Corrupted=7.0, Location='Slovenia', WPM_Typing_Speed=72.37)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iONlmngb9Riw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.clustering import KMeans"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cVSr6dG89aCm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import VectorAssembler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ogSJe-yB9dsA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        },
+        "outputId": "6528cfe1-e027-4725-8bea-658bf3d6cdec"
+      },
+      "source": [
+        "dataset.columns"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Session_Connection_Time',\n",
+              " 'Bytes Transferred',\n",
+              " 'Kali_Trace_Used',\n",
+              " 'Servers_Corrupted',\n",
+              " 'Pages_Corrupted',\n",
+              " 'Location',\n",
+              " 'WPM_Typing_Speed']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tKtNJI9v9fRj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "feat_cols = ['Session_Connection_Time',\n",
+        " 'Bytes Transferred',\n",
+        " 'Kali_Trace_Used',\n",
+        " 'Servers_Corrupted',\n",
+        " 'Pages_Corrupted',\n",
+        " 'WPM_Typing_Speed']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9tOkgvSA9jyh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "assembler = VectorAssembler(inputCols=feat_cols,outputCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C-ovuzAP9rk7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_data = assembler.transform(dataset)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WxP2LhAf9xuz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 518
+        },
+        "outputId": "f8afff59-d390-41ac-cb70-1e6bbc64f9f2"
+      },
+      "source": [
+        "final_data.show()"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----------------------+-----------------+---------------+-----------------+---------------+--------------------+----------------+--------------------+\n",
+            "|Session_Connection_Time|Bytes Transferred|Kali_Trace_Used|Servers_Corrupted|Pages_Corrupted|            Location|WPM_Typing_Speed|            features|\n",
+            "+-----------------------+-----------------+---------------+-----------------+---------------+--------------------+----------------+--------------------+\n",
+            "|                    8.0|           391.09|              1|             2.96|            7.0|            Slovenia|           72.37|[8.0,391.09,1.0,2...|\n",
+            "|                   20.0|           720.99|              0|             3.04|            9.0|British Virgin Is...|           69.08|[20.0,720.99,0.0,...|\n",
+            "|                   31.0|           356.32|              1|             3.71|            8.0|             Tokelau|           70.58|[31.0,356.32,1.0,...|\n",
+            "|                    2.0|           228.08|              1|             2.48|            8.0|             Bolivia|            70.8|[2.0,228.08,1.0,2...|\n",
+            "|                   20.0|            408.5|              0|             3.57|            8.0|                Iraq|           71.28|[20.0,408.5,0.0,3...|\n",
+            "|                    1.0|           390.69|              1|             2.79|            9.0|    Marshall Islands|           71.57|[1.0,390.69,1.0,2...|\n",
+            "|                   18.0|           342.97|              1|              5.1|            7.0|             Georgia|           72.32|[18.0,342.97,1.0,...|\n",
+            "|                   22.0|           101.61|              1|             3.03|            7.0|         Timor-Leste|           72.03|[22.0,101.61,1.0,...|\n",
+            "|                   15.0|           275.53|              1|             3.53|            8.0|Palestinian Terri...|           70.17|[15.0,275.53,1.0,...|\n",
+            "|                   12.0|           424.83|              1|             2.53|            8.0|          Bangladesh|           69.99|[12.0,424.83,1.0,...|\n",
+            "|                   15.0|           249.09|              1|             3.39|            9.0|Northern Mariana ...|           70.77|[15.0,249.09,1.0,...|\n",
+            "|                   32.0|           242.48|              0|             4.24|            8.0|            Zimbabwe|           67.93|[32.0,242.48,0.0,...|\n",
+            "|                   23.0|           514.54|              0|             3.18|            8.0|         Isle of Man|           68.56|[23.0,514.54,0.0,...|\n",
+            "|                    9.0|           284.77|              0|             3.12|            9.0|Sao Tome and Prin...|           70.82|[9.0,284.77,0.0,3...|\n",
+            "|                   27.0|           779.25|              1|             2.37|            8.0|              Greece|           72.73|[27.0,779.25,1.0,...|\n",
+            "|                   12.0|           307.31|              1|             3.22|            7.0|     Solomon Islands|           67.95|[12.0,307.31,1.0,...|\n",
+            "|                   21.0|           355.94|              1|              2.0|            7.0|       Guinea-Bissau|            72.0|[21.0,355.94,1.0,...|\n",
+            "|                   10.0|           372.65|              0|             3.33|            7.0|        Burkina Faso|           69.19|[10.0,372.65,0.0,...|\n",
+            "|                   20.0|           347.23|              1|             2.33|            7.0|            Mongolia|           70.41|[20.0,347.23,1.0,...|\n",
+            "|                   22.0|           456.57|              0|             1.52|            8.0|             Nigeria|           69.35|[22.0,456.57,0.0,...|\n",
+            "+-----------------------+-----------------+---------------+-----------------+---------------+--------------------+----------------+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hjFGdduu9zk2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import StandardScaler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YOPXtbE294lf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scaler = StandardScaler(inputCol='features',outputCol='scaledFeatures')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PdD4-a2r-Axv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scaler_model = scaler.fit(final_data)\n",
+        "cluster_final_data = scaler_model.transform(final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pos5aGzg-IRa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 220
+        },
+        "outputId": "15cf2925-4a3c-4deb-ee22-7600ae946193"
+      },
+      "source": [
+        "cluster_final_data.printSchema()"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- Session_Connection_Time: double (nullable = true)\n",
+            " |-- Bytes Transferred: double (nullable = true)\n",
+            " |-- Kali_Trace_Used: integer (nullable = true)\n",
+            " |-- Servers_Corrupted: double (nullable = true)\n",
+            " |-- Pages_Corrupted: double (nullable = true)\n",
+            " |-- Location: string (nullable = true)\n",
+            " |-- WPM_Typing_Speed: double (nullable = true)\n",
+            " |-- features: vector (nullable = true)\n",
+            " |-- scaledFeatures: vector (nullable = true)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v21AvuLJ-LMI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "kmeans2 = KMeans(featuresCol='scaledFeatures',k=2)\n",
+        "kmeans3 = KMeans(featuresCol='scaledFeatures',k=3)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bym-VvEl-Xbd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model_k2 = kmeans2.fit(cluster_final_data)\n",
+        "model_k3 = kmeans3.fit(cluster_final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IlPOBkUB-g_F",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "outputId": "f3c12be7-7968-40ec-871b-7c338d1ae79c"
+      },
+      "source": [
+        "model_k3.transform(cluster_final_data).groupBy('prediction').count().show()"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+----------+-----+\n",
+            "|prediction|count|\n",
+            "+----------+-----+\n",
+            "|         1|   88|\n",
+            "|         2|   79|\n",
+            "|         0|  167|\n",
+            "+----------+-----+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YlBBcGhB-soq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        },
+        "outputId": "6c5b691c-1834-456b-bf4d-6ea1d203be37"
+      },
+      "source": [
+        "model_k2.transform(cluster_final_data).groupBy('prediction').count().show()"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+----------+-----+\n",
+            "|prediction|count|\n",
+            "+----------+-----+\n",
+            "|         1|  167|\n",
+            "|         0|  167|\n",
+            "+----------+-----+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VtLLmO1i-8d1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Only two hackers involved with even sessions"
       ],
       "execution_count": 0,
       "outputs": []
