--- a/08_sparkNLP.ipynb
+++ b/08_sparkNLP.ipynb
@@ -898,9 +898,594 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "erIrax-yHNHt",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Code Along - Spam Detection Filter"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "YSWHvllE8Bjj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data = spark.read.csv('SMSSpamCollection',inferSchema=True,sep='\\t')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wYZj11CnIatp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data = data.withColumnRenamed('_c0','class').withColumnRenamed('_c1','text')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0v6KbIbVIdql",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 498
+        },
+        "outputId": "64af4d68-d997-405f-f89b-27bf971fc864"
+      },
+      "source": [
+        "data.show()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----+--------------------+\n",
+            "|class|                text|\n",
+            "+-----+--------------------+\n",
+            "|  ham|Go until jurong p...|\n",
+            "|  ham|Ok lar... Joking ...|\n",
+            "| spam|Free entry in 2 a...|\n",
+            "|  ham|U dun say so earl...|\n",
+            "|  ham|Nah I don't think...|\n",
+            "| spam|FreeMsg Hey there...|\n",
+            "|  ham|Even my brother i...|\n",
+            "|  ham|As per your reque...|\n",
+            "| spam|WINNER!! As a val...|\n",
+            "| spam|Had your mobile 1...|\n",
+            "|  ham|I'm gonna be home...|\n",
+            "| spam|SIX chances to wi...|\n",
+            "| spam|URGENT! You have ...|\n",
+            "|  ham|I've been searchi...|\n",
+            "|  ham|I HAVE A DATE ON ...|\n",
+            "| spam|XXXMobileMovieClu...|\n",
+            "|  ham|Oh k...i'm watchi...|\n",
+            "|  ham|Eh u remember how...|\n",
+            "|  ham|Fine if thats th...|\n",
+            "| spam|England v Macedon...|\n",
+            "+-----+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RHIXZILTIugl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.sql.functions import length"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JPo3wAFDI3WY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data = data.withColumn('length',length(data['text']))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1RhTcCJbI8Ov",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 498
+        },
+        "outputId": "c53a7f54-27f8-4447-9472-128c2c909a3e"
+      },
+      "source": [
+        "data.show()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----+--------------------+------+\n",
+            "|class|                text|length|\n",
+            "+-----+--------------------+------+\n",
+            "|  ham|Go until jurong p...|   111|\n",
+            "|  ham|Ok lar... Joking ...|    29|\n",
+            "| spam|Free entry in 2 a...|   155|\n",
+            "|  ham|U dun say so earl...|    49|\n",
+            "|  ham|Nah I don't think...|    61|\n",
+            "| spam|FreeMsg Hey there...|   147|\n",
+            "|  ham|Even my brother i...|    77|\n",
+            "|  ham|As per your reque...|   160|\n",
+            "| spam|WINNER!! As a val...|   157|\n",
+            "| spam|Had your mobile 1...|   154|\n",
+            "|  ham|I'm gonna be home...|   109|\n",
+            "| spam|SIX chances to wi...|   136|\n",
+            "| spam|URGENT! You have ...|   155|\n",
+            "|  ham|I've been searchi...|   196|\n",
+            "|  ham|I HAVE A DATE ON ...|    35|\n",
+            "| spam|XXXMobileMovieClu...|   149|\n",
+            "|  ham|Oh k...i'm watchi...|    26|\n",
+            "|  ham|Eh u remember how...|    81|\n",
+            "|  ham|Fine if thats th...|    56|\n",
+            "| spam|England v Macedon...|   155|\n",
+            "+-----+--------------------+------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K6TadVRxI92y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        },
+        "outputId": "2f22267b-5f39-4dcf-c1c5-b0b3ab470f02"
+      },
+      "source": [
+        "data.groupBy('class').mean().show() # length can be useful feature"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----+-----------------+\n",
+            "|class|      avg(length)|\n",
+            "+-----+-----------------+\n",
+            "|  ham|71.45431945307645|\n",
+            "| spam|138.6706827309237|\n",
+            "+-----+-----------------+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4iiPduh4JDPC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import Tokenizer,StopWordsRemover,CountVectorizer,IDF,StringIndexer"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3kigCs7pJWPA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "tokenizer = Tokenizer(inputCol='text',outputCol='token_text')\n",
+        "stop_remove = StopWordsRemover(inputCol='token_text',outputCol='stop_token')\n",
+        "cv = CountVectorizer(inputCol='stop_token',outputCol='c_vec')\n",
+        "idf = IDF(inputCol='c_vec',outputCol='tf_idf')\n",
+        "ham_spam_to_numeric = StringIndexer(inputCol='class',outputCol='label')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6_cT2accKSvZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import VectorAssembler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KGYsNek1Kdp9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "clean_up = VectorAssembler(inputCols=['tf_idf','length'],outputCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_-uFiSZYKliI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.classification import NaiveBayes"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_lZhE8BsK6GW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "nb = NaiveBayes()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qj8tvx8bK_EC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml import Pipeline"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y66blSqnLUNJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data_prep_pipe = Pipeline(stages=[ham_spam_to_numeric,tokenizer,\n",
+        "                                  stop_remove,cv,idf,clean_up])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a6ymhpOgLfD6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cleaner = data_prep_pipe.fit(data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GngAdsWmLiqK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "clean_data = cleaner.transform(data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LJAbIoiXLmhy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        },
+        "outputId": "191278d7-f797-41ba-b086-54cb3ca24cbb"
+      },
+      "source": [
+        "clean_data.columns"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['class',\n",
+              " 'text',\n",
+              " 'length',\n",
+              " 'label',\n",
+              " 'token_text',\n",
+              " 'stop_token',\n",
+              " 'c_vec',\n",
+              " 'tf_idf',\n",
+              " 'features']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zTxnoBYLLp5W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "clean_data = clean_data.select('label','features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z1CHC_jaLuoy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 498
+        },
+        "outputId": "526445e3-49a0-4a62-9d85-7b0d2c96f7f7"
+      },
+      "source": [
+        "clean_data.show()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----+--------------------+\n",
+            "|label|            features|\n",
+            "+-----+--------------------+\n",
+            "|  0.0|(13424,[7,11,31,6...|\n",
+            "|  0.0|(13424,[0,24,297,...|\n",
+            "|  1.0|(13424,[2,13,19,3...|\n",
+            "|  0.0|(13424,[0,70,80,1...|\n",
+            "|  0.0|(13424,[36,134,31...|\n",
+            "|  1.0|(13424,[10,60,139...|\n",
+            "|  0.0|(13424,[10,53,103...|\n",
+            "|  0.0|(13424,[125,184,4...|\n",
+            "|  1.0|(13424,[1,47,118,...|\n",
+            "|  1.0|(13424,[0,1,13,27...|\n",
+            "|  0.0|(13424,[18,43,120...|\n",
+            "|  1.0|(13424,[8,17,37,8...|\n",
+            "|  1.0|(13424,[13,30,47,...|\n",
+            "|  0.0|(13424,[39,96,217...|\n",
+            "|  0.0|(13424,[552,1697,...|\n",
+            "|  1.0|(13424,[30,109,11...|\n",
+            "|  0.0|(13424,[82,214,47...|\n",
+            "|  0.0|(13424,[0,2,49,13...|\n",
+            "|  0.0|(13424,[0,74,105,...|\n",
+            "|  1.0|(13424,[4,30,33,5...|\n",
+            "+-----+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UWYc_YBtLw8m",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train,test = clean_data.randomSplit([0.7,0.3])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WUYxNcpZL2ng",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "spam_detector = nb.fit(train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h9eVfz6lL5kl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_results = spam_detector.transform(test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "viGKE8k3MB-q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 498
+        },
+        "outputId": "05f27feb-a685-41da-d3ef-0279666e7b8b"
+      },
+      "source": [
+        "test_results.show()"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----+--------------------+--------------------+--------------------+----------+\n",
+            "|label|            features|       rawPrediction|         probability|prediction|\n",
+            "+-----+--------------------+--------------------+--------------------+----------+\n",
+            "|  0.0|(13424,[0,1,2,13,...|[-610.85546689897...|[1.0,3.7829297063...|       0.0|\n",
+            "|  0.0|(13424,[0,1,4,50,...|[-848.43985695122...|[1.0,4.5683403142...|       0.0|\n",
+            "|  0.0|(13424,[0,1,14,78...|[-690.21355905714...|[1.0,8.0598472485...|       0.0|\n",
+            "|  0.0|(13424,[0,1,15,20...|[-673.41547015550...|[1.0,4.8212392214...|       0.0|\n",
+            "|  0.0|(13424,[0,1,18,20...|[-831.53281889534...|[1.0,3.5555083574...|       0.0|\n",
+            "|  0.0|(13424,[0,1,27,88...|[-1527.3447817835...|[0.99999999472874...|       0.0|\n",
+            "|  0.0|(13424,[0,1,43,69...|[-615.20663726364...|[0.99836287729809...|       0.0|\n",
+            "|  0.0|(13424,[0,1,146,1...|[-251.11225743114...|[0.78763917898146...|       0.0|\n",
+            "|  0.0|(13424,[0,1,416,6...|[-301.56982978764...|[0.99999999999999...|       0.0|\n",
+            "|  0.0|(13424,[0,2,3,5,3...|[-488.89055965605...|[1.0,7.3332705725...|       0.0|\n",
+            "|  0.0|(13424,[0,2,4,5,7...|[-990.03621852717...|[1.0,3.1402827348...|       0.0|\n",
+            "|  0.0|(13424,[0,2,4,5,1...|[-1623.1177675758...|[1.0,1.0920844123...|       0.0|\n",
+            "|  0.0|(13424,[0,2,4,8,2...|[-1425.6664792709...|[1.0,6.9646605473...|       0.0|\n",
+            "|  0.0|(13424,[0,2,4,25,...|[-421.96505573097...|[1.0,2.9552143179...|       0.0|\n",
+            "|  0.0|(13424,[0,2,4,40,...|[-1578.9320989175...|[0.99999991835975...|       0.0|\n",
+            "|  0.0|(13424,[0,2,4,128...|[-667.19370022770...|[1.0,6.1811970548...|       0.0|\n",
+            "|  0.0|(13424,[0,2,7,8,3...|[-1141.7502027656...|[1.0,6.0092643639...|       0.0|\n",
+            "|  0.0|(13424,[0,2,7,8,1...|[-452.66490145408...|[1.0,1.3954934604...|       0.0|\n",
+            "|  0.0|(13424,[0,2,7,11,...|[-1418.3096073750...|[1.0,4.1682117341...|       0.0|\n",
+            "|  0.0|(13424,[0,2,7,128...|[-238.49185987798...|[1.0,1.2256849347...|       0.0|\n",
+            "+-----+--------------------+--------------------+--------------------+----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nwRziZY9MGPt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# evaluate results\n",
+        "from pyspark.ml.evaluation import MulticlassClassificationEvaluator"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4fdoJb2dMO-a",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "acc_eval = MulticlassClassificationEvaluator(metricName='accuracy')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wU0TUBspMSIA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "acc = acc_eval.evaluate(test_results)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qTKenaomMuUa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "70c75566-3797-4a64-b6c7-e70e5e2a67a7"
+      },
+      "source": [
+        "print('Accuracy of NB model:')\n",
+        "print(acc)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy of NB model:\n",
+            "0.9122807017543859\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5D1i9LCpM85s",
         "colab_type": "code",
         "colab": {}
       },
